# HolonAI

./: .gitignore  README.md  pyproject.toml  test_hud.py
.claude/: settings.local.json
docs/: architecture.md  quickstart.md  serialization.md
holon_ai/: __init__.py  action.py  client.py  containers.py  converter.py  holon.py  serialization.py  tokens.py
holonic_engine/: __init__.py  agent.py  client.py  containers.py  converter.py  heart.py  holon.py  logging.py  telemetry.py
holonic_engine/interface/: __init__.py  app.py
holonic_engine/interface/static/: style.css
holonic_engine/interface/templates/: index.html
holonic_engine/storage/: __init__.py  interface.py  schema.py  sql.py
tests/: test_action.py  test_agent.py  test_ai_integration.py  test_containers.py  test_heart.py  test_holon.py  test_serialization.py  test_storage.py  test_telemetry.py  test_tokens.py
