[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holon-ai"
version = "0.1.0"
description = "A library for building AI agent systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NullCoward"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cattrs>=24.1.0",
]

[project.optional-dependencies]
toon = [
    "toon>=0.1.0",
]
tokens = [
    "tiktoken>=0.7.0",
]
all = [
    "toon>=0.1.0",
    "tiktoken>=0.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "toon>=0.1.0",
    "tiktoken>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/NullCoward/HolonAIRedux"
Repository = "https://github.com/NullCoward/HolonAIRedux"

[tool.setuptools.packages.find]
where = ["."]
include = ["holon_ai*"]
