[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holonic-engine"
version = "0.1.0"
description = "A library for building AI agent systems using Holonic architecture"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NullCoward"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-toon>=0.1.0",
    "cattrs>=24.1.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/NullCoward/HolonicEngine"
Repository = "https://github.com/NullCoward/HolonicEngine"

[tool.setuptools.packages.find]
where = ["."]
include = ["holonic_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require API keys)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
